--- a/index.html
+++ b/index.html
@@ -99,16 +99,24 @@
 
     <div class="container my-services">
         <h2>My Services</h2>
-        <div class="marker2">
+        <!-- <div class="marker2">
             <img src="images/marker.svg" alt="">
-        </div>
+        </div> -->
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, </p>
         <p>Lorem ipsum dolor sit amet.</p>
         <div class="services-img">
-            <img src="images/services/app-development.svg" alt="">
-            <img src="images/services/full-stack.svg" alt="">
-            <img src="images/services/graphic-design.svg" alt="">
-            <img src="images/services/ui-ux.svg" alt="">
+            <div class="s-img"><img src="images/services/app-development.svg" alt="">
+                <p>Web Design</p>
+            </div>
+            <div class="s-img"><img src="images/services/full-stack.svg" alt="">
+                <p>UI/UX Design</p>
+            </div>
+            <div class="s-img"><img src="images/services/graphic-design.svg" alt="">
+                <p>Web Development</p>
+            </div>
+            <div class="s-img"><img src="images/services/ui-ux.svg" alt="">
+                <p>Android Developer</p>
+            </div>
         </div>
 
     </div>
